# openace

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  JLCPCBOrdering.tx  OpenAce alias  README-2.md  README.md  gatas.code-workspace  tmp.json
src/: CMakeLists.txt  Community-Supported-Ports.patch  Dockerfile  build-entrypoint.sh  build-with-docker.sh  docker-entrypoint.sh  freertos.patch  pico-sdk.patch  test-entrypoint.sh
src/SystemGUI/: .parcelrcrelease  .prettierignore  .proxyrc.js  .terserrc  package-lock.json  package.json  readme.md
src/SystemGUI/captive/: captive.html  hotspot-detect.html  ios.html
src/SystemGUI/src/: error.json  index.html
src/SystemGUI/src/components/: actionbuttons.js  aircraftconfig.js  aircraftsession.js  gpsstatus.js  menu.js  moduleconfigs.js  modules.js  monitormodule.js  session.js  store.js  units.js  utils.js
src/SystemGUI/src/css/: _custom_styles.scss  _custom_variables.scss  custom.css  spry.min.css  styles.scss
src/lib/: CMakeLists.txt  gatas_module.cmake  openace_module.cmake
src/lib/acespi/: CMakeLists.txt
src/lib/acespi/ace/: acespi.cpp  acespi.hpp
src/lib/adsbdecoder/: CMakeLists.txt  TODO.md
src/lib/adsbdecoder/ace/: addresscache.hpp  adsbdatacollector.hpp  adsbdecoder.cpp  adsbdecoder.hpp  iaddresscache.hpp
src/lib/adsbdecoder/adsbdecoder_tests/: CMakeLists.txt  addresscache_test.cpp  adsb_test.cpp  adsbdatacollector_test.cpp
src/lib/adsl/: CMakeLists.txt
src/lib/adsl/ace/: adsl.cpp  adsl.hpp  adsl_packet.hpp
src/lib/adsl/adsl_tests/: CMakeLists.txt  adsl_test.cpp
src/lib/adslace/: CMakeLists.txt
src/lib/adslace/ace/: adslace.hpp
src/lib/airconnect/: CMakeLists.txt
src/lib/airconnect/ace/: airconnect.cpp  airconnect.hpp
src/lib/aircrafttracker/: CMakeLists.txt
src/lib/aircrafttracker/ace/: aircrafttracker.cpp  aircrafttracker.hpp  trackerdata.hpp
src/lib/aircrafttracker/aircrafttracker_tests/: CMakeLists.txt  trackerdata_test.cpp
src/lib/bluetooth/: CMakeLists.txt  btstack_config.h
src/lib/bluetooth/ace/: bluetooth.cpp  bluetooth.hpp  gatas_gatt.gatt  openace_gatt.gatt
src/lib/bmp280/: CMakeLists.txt
src/lib/bmp280/ace/: bmp280.cpp  bmp280.hpp
src/lib/config/: CMakeLists.txt  FreeRTOSConfig.h
src/lib/config/ace/: config.cpp  config.hpp  flashstore.cpp  flashstore.hpp  inmemorystore.hpp
src/lib/config/config_tests/: CMakeLists.txt  config_test.cpp  test.json
src/lib/core/: CMakeLists.txt
src/lib/core/ace/: antennaRadiationPattern.hpp  assert.hpp  basemodule.cpp  basemodule.hpp  binarymessages.hpp  constants.hpp  coreutils.cpp  coreutils.hpp  datasourcetimestatstable.hpp  debug.hpp  egm2008_dem.hpp  egm96_dem.hpp  eventsync.hpp  lib_crc.hpp  lwiplock.hpp  measure.hpp  messagerouter.hpp  messages.hpp  models.cpp  models.hpp  pbufguard.hpp  poolallocator.hpp  property.hpp  recursiveguard.hpp  safespsc.hpp  scopedpbuf.hpp  semaphoreguard.hpp  spinlockguard.hpp
src/lib/core/core_tests/: CMakeLists.txt  coreutils_test.cpp  poolallocator_test.cpp
src/lib/dataport/: CMakeLists.txt
src/lib/dataport/ace/: dataport.cpp  dataport.hpp
src/lib/dump1090Client/: CMakeLists.txt
src/lib/dump1090Client/ace/: dump1090client.cpp  dump1090client.hpp
src/lib/fanet/: CMakeLists.txt
src/lib/fanet/ace/: fanetace.cpp  fanetace.hpp
src/lib/fanet/fanet/: fanet_builder.hpp  fanet_common.hpp  fanet_packet.hpp  fanet_rx.hpp
src/lib/fanet/fanet_tests/: CMakeLists.txt  fanet_builder_tests.cpp  fanet_common_tests.cpp
src/lib/fanetace/: CMakeLists.txt  README.md  protocol.txt
src/lib/fanetace/ace/: fanetace.cpp  fanetace.hpp
src/lib/fanetace/fanet/: ack.hpp  address.hpp  blockAllocator.hpp  extendedHeader.hpp  fanet.hpp  fanet_packet.hpp  groundTracking.hpp  header.hpp  message.hpp  name.hpp  neighbourTable.hpp  packet.hpp  packetBuilder.hpp  packetParser.hpp  protocol.hpp  tracking.hpp  txFrame.hpp  utils.hpp
src/lib/fanetace/fanet_tests/: CMakeLists.txt  fanet_tests.cpp  groundTracking_tests.cpp  helpers.hpp  message_tests.cpp  name_tests.cpp  packetBuilder_tests.cpp  packetParser_tests.cpp  packet_tests.cpp  protocol_tests.cpp  queue_tests.cpp  tracking_tests.cpp  utils_tests.cpp
src/lib/flarm/: CMakeLists.txt
src/lib/flarm/ace/: flarm2024.cpp  flarm2024.hpp  flarm_2023.cpp  flarm_2023.hpp  flarm_utils.cpp
src/lib/flarm/flarm_tests/: CMakeLists.txt  flarm2024_test.cpp
src/lib/flarmgatas/: CMakeLists.txt  readme.md
src/lib/flarmgatas/ace/: flarm2024.cpp  flarm2024.hpp
src/lib/flarmgatas/doc/: Pi014La8.md  nmi71bTG.md  v4.txt  v6.txt  v7.txt  v8.txt
src/lib/flarmgatas/flarm_tests/: CMakeLists.txt  flarm2024_test.cpp  flarm_utils_test.cpp
src/lib/gatasconnect/: CMakeLists.txt  lwipopts.h
src/lib/gatasconnect/ace/: gatasconnect.hpp  gatasconnecttcp.hpp  gatasconnectudp.hpp
src/lib/gdl90service/: CMakeLists.txt
src/lib/gdl90service/ace/: gdl90service.cpp  gdl90service.hpp
src/lib/gdl90service/gdl90service_tests/: CMakeLists.txt  gdl90service_test.cpp
src/lib/gdloverudp/: CMakeLists.txt
src/lib/gdloverudp/ace/: gdloverudp.cpp  (+1 more)
src/lib/gps/: CMakeLists.txt  FreeRTOSConfig.h  README.md
src/lib/gpsdecoder/: CMakeLists.txt
src/lib/idle/: CMakeLists.txt
src/lib/include/: FreeRTOSConfig.h  btstack_config.h  lwipopts.h  lwippools.h
src/lib/mocks/: FreeRTOS.h  FreeRTOSconfig.h  event_groups.h  geomock.hpp  mockconfig.h  mockutils.h  pico.h  queue.h  semphr.h  testhelpers.h
src/lib/ogn/: CMakeLists.txt
src/lib/pioserial/: CMakeLists.txt
src/lib/radiotuner/: CMakeLists.txt  readme.md
src/lib/rtc/: CMakeLists.txt
src/lib/serialadsb/: CMakeLists.txt
src/lib/sx1262/: CMakeLists.txt
src/lib/tcpclient/: CMakeLists.txt
src/lib/ubloxm8n/: CMakeLists.txt
src/lib/utils/: CMakeLists.txt  ddb.py  index.html
src/lib/webserver/: CMakeLists.txt  gatas_fsdata.c  makeFs.sh  openace_fsdata.c
src/lib/wifiservice/: CMakeLists.txt
src/pico/: .gitignore  CMakeLists.txt  IdleMemory.c  btstack_config.h  config.hpp.in  gatas_default_config.json  main copy.cpp  main.cpp  ninja_rp2040.sh  ninja_rp2350.sh  openace_default_config.json  rp2040.sh  rp2350.sh
(+205 files in other folders)
