set_directory_properties(PROPERTIES COMPILE_DEFINITIONS SHOW_MESSAGE=1)

add_subdirectory(core)
add_subdirectory(config)
add_subdirectory(adsbdecoder)
add_subdirectory(aircrafttracker)
add_subdirectory(gpsdecoder)
add_subdirectory(rtc)
add_subdirectory(dump1090Client)
add_subdirectory(ubloxm8n)
add_subdirectory(serialadsb)
add_subdirectory(wifiservice)
add_subdirectory(webserver)
add_subdirectory(tcpclient)
add_subdirectory(acespi)
add_subdirectory(bmp280)
add_subdirectory(sx1262)
add_subdirectory(utils)
add_subdirectory(pioserial)
add_subdirectory(flarm)
add_subdirectory(ogn)
add_subdirectory(adsl)
add_subdirectory(radiotuner)
add_subdirectory(gdl90service)
add_subdirectory(gdloverudp)
add_subdirectory(dataport)
add_subdirectory(airconnect)


if (PICO_SDK_VERSION_STRING)
#    add_subdirectory(pico)
endif()

if (NOT PICO_SDK_VERSION_STRING)
#    add_subdirectory(local)
endif()
